<resources>
    <string name="app_name">loginfirebase</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="click_to_register">Register</string>
    <string name="register">Register</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="logout">Logout</string>
    <string name="complete_registration">Complete Registration</string>
</resources>